--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                 <a class="nav-link js-scroll-trigger" href="#proj">Projects</a>
               </li>
               <li class="nav-item">
+                  <a class="nav-link js-scroll-trigger" href="portfolio.html">Portfolio</a>
+                </li>
+              <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="index1.html">Classwork</a>
               </li>
             </ul>
@@ -35,7 +38,7 @@
         </div>
     </nav>
 
-  <header class="masthead">
+  <header class="main">
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
           <div class="photo-container"><img src="img/2.jpg" alt="" height=100 w></div>
