--- a/portfolio.html
+++ b/portfolio.html
@@ -14,11 +14,11 @@
 <!--Make the header shorter.-->
 <body id="page-top">
     <style>
-        .masthead{
+        .main{
             min-height: 15rem;
         }
         @media (min-width: 992px) {
-            .masthead {
+            .main {
             height: 75vh;
             padding: 0;
             }
@@ -44,7 +44,7 @@
         </div>
     </nav>
 
-    <header class="masthead">
+    <header class="main">
         <div class="container d-flex h-75 align-items-center">
             <div class="mx-auto text-center">
                 <h1 class="mx-auto  text-light text-uppercase">Photgraphy Portfolio</h1>
@@ -76,7 +76,7 @@
             </div>
         </div>
     </section>
-    
+
     <footer class="bg-light py-5">
         <div class="container">
             <div class="small text-center text-muted">:) Thanks for stopping by!</div>
