--- a/me.html
+++ b/me.html
@@ -14,11 +14,11 @@
 <!--Id is handy to use as an achor for a scroll point. It's a trick I use a lot in markdown.-->
 <body id="page-top">
         <style>
-                .masthead{
+                .main{
                     min-height: 15rem;
                 }
                 @media (min-width: 992px) {
-                    .masthead {
+                    .main {
                     height: 75vh;
                     padding: 0;
                     }
@@ -44,7 +44,7 @@
         </div>
     </nav>
 
-    <header class="masthead">
+    <header class="main">
         <div class="container d-flex h-100 align-items-center">
             <div class="mx-auto text-center">
                     <h1 class="mx-auto  text-light text-uppercase">About Me!</h1>
