--- a/me.html
+++ b/me.html
@@ -50,23 +50,23 @@
                     <h1 class="mx-auto  text-light text-uppercase">About Me!</h1>
                 </div>
         </div>
-        </header>
+    </header>
 
-    <section class="bg-light" id="team">
+    <section class="bg-light">
         <div class="container">
             <div class="row">
                 <div class="col-sm-4">
-                    <div class="team-member">
+                    <div class="crcle">
                         <img class="mx-auto rounded-circle" src="img/skating.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="team-member">
+                    <div class="crcle">
                         <img class="mx-auto rounded-circle" src="img/hiking.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="team-member">
+                    <div class="crcle">
                         <img class="mx-auto rounded-circle" src="img/p4.jpg" alt="">
                     </div>
                 </div>
