--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </header>
 
 <!--Js scroll triggers here for about-->
-  <section id="about" class="about-section">
+  <section id="about" class="abs">
     <div class="container">
       <div class="row">
         <div class="col-lg-3">
@@ -63,11 +63,11 @@
       </div>
     </div>
   </section>
-  <section id="exp" class="exp-section">
+  <section id="exp" class="exps">
       <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Experience</h2>
+                <h2 class="section-heading text-uppercase">Experience</h2>
                 <h3 class="section-subheading text-muted">Companies I've worked for</h3>
             </div>
             <div class="col-lg-5 text-right" target="_blank">
@@ -83,7 +83,7 @@
       </div>
   </section>
 
-  <section id="proj" class="projects-section bg-light">
+  <section id="proj" class="projects bg-light">
     <div class="container">
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
@@ -104,7 +104,7 @@
 
       <div class="row justify-content-center no-gutters">
           <div class="col-lg-6">
-            <img class="img-fluid" src="img/proj2.png" alt="">
+            <a href="<img class="img-fluid" src="img/proj2.png" alt="">
           </div>
           <div class="col-lg-6 order-lg-first">
             <div class="bg-black text-center h-100 project">
@@ -122,7 +122,7 @@
       </div>
   </section>
 
-  <section id="exp" class="language-section">
+  <section id="lang" class="languages">
     <div class="container d-flex h-100 align-items-center">
       <div class="row">
         <div clas="col-lg-3">
@@ -134,7 +134,7 @@
     </div>
   </section>
 
-  <footer class="bg-light py-5">
+  <footer class="bg-light py-4">
       <div class="container">
         <div class="small text-center text-muted">:) Thanks for stopping by! Website is still a WIP - Student showcase has higher priority</div>
       </div>
