--- a/portfolio.html
+++ b/portfolio.html
@@ -39,6 +39,9 @@
               <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="index2.html">Classwork</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="me.html">About Me</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -59,19 +62,19 @@
                 <img class="img-fluid" src="img/p1.jpg" alt="">
             </div>
             <div class="col-lg-4 col-sm-6">
-                <img class="img-fluid" src="img/p3.jpg" style="height:350px;" alt="">
+                <img class="img-fluid" src="img/a1.jpg" alt="">
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <img class="img-fluid" src="img/hiking.jpg" alt="">
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <img class="img-fluid" src="img/a4.jpg" alt="">
             </div>
             <div class="col-lg-4 col-sm-6">
                 <img class="img-fluid" src="img/p2.jpg" alt="">
             </div>
             <div class="col-lg-4 col-sm-6">
-                <img class="img-fluid" src="img/p4.jpg" alt="">
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <img class="img-fluid" src="img/p5.jpg" alt="">
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <img class="img-fluid" src="img/p6.jpg" alt="">
+                <img class="img-fluid" src="img/q1.jpg" alt="">
                 </div>
             </div>
         </div>
