--- a/index.html
+++ b/index.html
@@ -28,9 +28,6 @@
                 <a class="nav-link js-scroll-trigger" href="#proj">Projects</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link js-scroll-trigger" href="portfolio.html">Portfolio</a>
-                </li>
-              <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="index1.html">Classwork</a>
               </li>
             </ul>
@@ -58,8 +55,13 @@
         <div class="col-lg-8">
           <h2 class="text-white mb-4 text-center">“It’s not who I am underneath, but what I do that defines me"</h2>
           <p class="text-white">Thanks to my experience I've found a new passion in data science. With my background in Computer Science, Mathematics, and Business, I'm able to learn quickly, and continiously evolve into a learning machine.</p>
-          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="me.html">Tell Me More</a>
+        
         </div>
+        
+      </div>
+      <div class="col-md-4 center-block">
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="me.html">Tell Me More</a>
+
       </div>
     </div>
   </section>
@@ -67,7 +69,7 @@
       <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading text-uppercase">Experience</h2>
+                <h2 class="section-heading">Experience</h2>
                 <h3 class="section-subheading text-muted">Companies I've worked for</h3>
             </div>
             <div class="col-lg-5 text-right" target="_blank">
@@ -83,7 +85,7 @@
       </div>
   </section>
 
-  <section id="proj" class="projects bg-light">
+  <section id="proj" class="projects-section bg-light">
     <div class="container">
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
@@ -104,7 +106,7 @@
 
       <div class="row justify-content-center no-gutters">
           <div class="col-lg-6">
-            <a href="<img class="img-fluid" src="img/proj2.png" alt="">
+            <img class="img-fluid" src="img/proj2.png" alt="">
           </div>
           <div class="col-lg-6 order-lg-first">
             <div class="bg-black text-center h-100 project">
@@ -134,7 +136,7 @@
     </div>
   </section>
 
-  <footer class="bg-light py-4">
+  <footer class="bg-light py-5">
       <div class="container">
         <div class="small text-center text-muted">:) Thanks for stopping by! Website is still a WIP - Student showcase has higher priority</div>
       </div>
@@ -147,4 +149,4 @@
 <script src="js/agency.js"></script>
 
 </body>
-</html>
+</html> 
