--- a/me.html
+++ b/me.html
@@ -116,7 +116,7 @@
 <script src="js/jquery/jquery.min.js"></script>
 <script src="js/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="js/jquery-easing/jquery.easing.min.js"></script>
-<script src="js/agency.js"></script>
+<script src="js/jupyter.js"></script>
 
 </body>
 </html>
