--- a/portfolio.html
+++ b/portfolio.html
@@ -80,17 +80,46 @@
         </div>
     </section>
 
-    <footer class="bg-light py-5">
+    <footer class="bg-dark py-5">
         <div class="container">
-            <div class="small text-center text-muted">:) Thanks for stopping by!</div>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="row">
+                        <div class="col-6">
+                            <ul class="list-unstyled">
+                                <li><a href="#experience">Experience</a></li>
+                                <li><a href="#projects">Projects</a></li>
+                                <li><a href="portfolio.html">Photography</a></li>
+                                <li><a href="#about">About</a></li>
+                            </ul>
+                        </div>
+                    <br>
+                </div>
+              </div>
+                <div class="col-md-6">
+                    <h5 class="text-md-left">Contact Me</h5>
+                    <hr>
+   
+                    <form>
+                        <fieldset class="form-group">
+                            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+                        </fieldset>
+                        <fieldset class="form-group">
+                            <textarea class="form-control" id="exampleMessage" placeholder="Message"></textarea>
+                        </fieldset>
+                        <fieldset class="form-group text-xs-right">
+                            <button type="button" class="btn btn-secondary-outline btn-lg btn-light">Send</button>
+                        </fieldset>
+                    </form>
+                </div>
+            </div>
         </div>
     </footer>
-
 <!-------------------End body-------------------->
 <script src="js/jquery/jquery.min.js"></script>
 <script src="js/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="js/jquery-easing/jquery.easing.min.js"></script>
-<script src="js/agency.js"></script>
+<script src="js/jupyter.js"></script>
 
   </body>
   </html>
